# DML

./: .gitignore  README.md
.ruff_cache/0.8.4/: 3653850685265579041  50054456001330116  6483275615867568597
HW1/step4_ge_validation_data/: .pre-commit-config.yaml  dvc.yaml  params.yaml  pyproject.toml
HW1/step4_ge_validation_data/.dvc/: config
HW1/step4_ge_validation_data/.dvc/tmp/: lock
HW1/step4_ge_validation_data/metrics/: metrics.json
HW1/step4_ge_validation_data/models/: model.pkl
HW1/step4_ge_validation_data/reports/validation/: index.html
HW1/step4_ge_validation_data/src/: evaluate.py  validate_model.py
HW2/step4_monitoring/: README.md  main.py  requirements.txt
HW2/step4_monitoring/config/: monitoring_config.yaml
HW2/step4_monitoring/logs/: metrics.jsonl
HW2/step4_monitoring/src/: config.py  logger.py  monitor.py
HW3/step3_rag/: README.md  macarena.metadata.json  rag_animation.py  run_macarena.sh
HW3/step3_rag/outputs/: macarena.metadata.json
